--- a/server/public/assets/package.json
+++ b/server/public/assets/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "4.0.0-beta.2",
     "jquery": "3.2.1",
     "popper.js": "1.12.6",
-    "datatables.net-bs4": "1.10.16"
+    "datatables.net-bs4": "1.10.16",
+    "jquery-validation": "1.17.0"
   },
   "devDependencies": {},
   "scripts": {
