--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -12,28 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0-rc.2",
-    "@angular/common": "5.0.0-rc.2",
-    "@angular/compiler": "5.0.0-rc.2",
-    "@angular/core": "5.0.0-rc.2",
-    "@angular/forms": "5.0.0-rc.2",
-    "@angular/http": "5.0.0-rc.2",
-    "@angular/platform-browser": "5.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "5.0.0-rc.2",
-    "@angular/router": "5.0.0-rc.2",
-    "angular-auth-oidc-client": "1.3.19",
+    "@angular/animations": "5.0.0-rc.5",
+    "@angular/cdk": "2.0.0-beta.12",
+    "@angular/common": "5.0.0-rc.5",
+    "@angular/compiler": "5.0.0-rc.5",
+    "@angular/core": "5.0.0-rc.5",
+    "@angular/forms": "5.0.0-rc.5",
+    "@angular/http": "5.0.0-rc.5",
+    "@angular/material": "2.0.0-beta.12",
+    "@angular/platform-browser": "5.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "5.0.0-rc.5",
+    "@angular/router": "5.0.0-rc.5",
+    "angular-auth-oidc-client": "^1.3.19",
+    "chart.js": "2.7.0",
     "core-js": "2.5.1",
-    "rxjs": "5.4.3",
+    "hammerjs": "2.0.8",
+    "rxjs": "5.5.1",
+    "web-animations-js": "2.3.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0-rc.0",
-    "@angular/compiler-cli": "5.0.0-rc.2",
-    "@angular/language-service": "5.0.0-rc.2",
-    "@types/jasmine": "2.6.0",
+    "@angular/cli": "1.5.0-rc.2",
+    "@angular/compiler-cli": "5.0.0-rc.5",
+    "@angular/language-service": "5.0.0-rc.5",
+    "@types/jasmine": "2.6.1",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "8.0.34",
-    "codelyzer": "3.2.1",
+    "@types/node": "8.0.47",
+    "codelyzer": "3.2.2",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
@@ -42,9 +47,9 @@
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "ts-node": "3.3.0",
-    "tslint": "5.7.0",
+    "tslint": "5.8.0",
     "typescript": "2.5.3"
   }
 }
