--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0-rc.5",
+    "@angular/animations": "4.4.6",
     "@angular/cdk": "2.0.0-beta.12",
-    "@angular/common": "5.0.0-rc.5",
-    "@angular/compiler": "5.0.0-rc.5",
-    "@angular/core": "5.0.0-rc.5",
-    "@angular/forms": "5.0.0-rc.5",
-    "@angular/http": "5.0.0-rc.5",
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
     "@angular/material": "2.0.0-beta.12",
-    "@angular/platform-browser": "5.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "5.0.0-rc.5",
-    "@angular/router": "5.0.0-rc.5",
-    "angular-auth-oidc-client": "^1.3.19",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/router": "4.4.6",
+    "angular-auth-oidc-client": "1.3.19",
     "chart.js": "2.7.0",
     "core-js": "2.5.1",
     "hammerjs": "2.0.8",
@@ -32,9 +32,9 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0-rc.2",
-    "@angular/compiler-cli": "5.0.0-rc.5",
-    "@angular/language-service": "5.0.0-rc.5",
+    "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/language-service": "4.4.6",
     "@types/jasmine": "2.6.1",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.0.47",
