--- a/server/public/assets/package.json
+++ b/server/public/assets/package.json
@@ -8,7 +8,8 @@
     "jquery": "3.2.1",
     "popper.js": "1.12.6",
     "datatables.net-bs4": "1.10.16",
-    "jquery-validation": "1.17.0"
+    "jquery-validation": "1.17.0",
+    "crypto-js": "3.1.9-1"
   },
   "devDependencies": {},
   "scripts": {
