--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.4.6",
-    "@angular/cdk": "2.0.0-beta.12",
-    "@angular/common": "4.4.6",
-    "@angular/compiler": "4.4.6",
-    "@angular/core": "4.4.6",
-    "@angular/forms": "4.4.6",
-    "@angular/http": "4.4.6",
-    "@angular/material": "2.0.0-beta.12",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
-    "@angular/router": "4.4.6",
-    "angular-auth-oidc-client": "3.0.2",
-    "chart.js": "2.7.0",
+    "@angular/animations": "5.0.0",
+    "@angular/cdk": "5.0.0-rc0",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/material": "5.0.0-rc0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
+    "angular-auth-oidc-client": "3.0.4",
+    "chart.js": "2.7.1",
     "core-js": "2.5.1",
     "hammerjs": "2.0.8",
-    "rxjs": "5.5.1",
+    "rxjs": "5.5.2",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.9",
-    "@angular/compiler-cli": "4.4.6",
-    "@angular/language-service": "4.4.6",
-    "@types/jasmine": "2.6.1",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/language-service": "5.0.0",
+    "@types/jasmine": "2.6.2",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.0.47",
-    "codelyzer": "3.2.2",
+    "codelyzer": "4.0.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
@@ -50,6 +50,6 @@
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
-    "typescript": "2.5.3"
+    "typescript": "2.6.1"
   }
 }
