--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -12,18 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0",
-    "@angular/cdk": "5.0.0-rc0",
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/material": "5.0.0-rc0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/router": "5.0.0",
-    "angular-auth-oidc-client": "3.0.4",
+    "@angular/animations": "5.0.3",
+    "@angular/cdk": "5.0.0-rc.1",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/material": "5.0.0-rc.1",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@angular/router": "5.0.3",
+    "angular-oauth2-oidc": "3.0.3",
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
     "hammerjs": "2.0.8",
@@ -32,12 +31,12 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/language-service": "5.0.0",
-    "@types/jasmine": "2.6.2",
+    "@angular/cli": "1.5.4",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/language-service": "5.0.3",
+    "@types/jasmine": "2.8.2",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "8.0.47",
+    "@types/node": "8.0.53",
     "codelyzer": "4.0.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
